--- a/index.html
+++ b/index.html
@@ -1,15 +1,94 @@
-<html>
-  <body>
-    <form id='uploadForm' 
-      encType="multipart/form-data">
-      <input type="file" name="sampleFile" />
-      <input type='submit' value='Upload!' />
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="/logo" sizes="48x48" type="img/jpg">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="/style">
+  <title>Download Master</title>
+</head>
+
+<body>
+  <div class="progress">
+    <div class="progress-bar" id="progress" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
+      aria-valuemax="100"></div>
+  </div>
+  <app class="app-wrapper">
+    <form id='uploadForm' encType="multipart/form-data">
+      <label class="download-field-wrap">
+        <input type="file" name="sampleFile" id="download" />
+        <p class="download-icon">
+          <?xml version="1.0" encoding="iso-8859-1"?>
+          <svg x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;"
+            xml:space="preserve" width="512px" height="512px">
+            <g>
+              <g>
+                <path d="M405.967,187.467c-1.069-78.061-64.902-141.239-143.213-141.239c-34.835,0-68.396,12.672-94.498,35.682    c-23.296,20.535-39.232,47.977-45.543,78.106c-0.461-0.005-0.918-0.009-1.374-0.009C54.434,160.008,0,214.441,0,281.347    s54.434,121.339,121.34,121.339h44.534c6.029,0,10.919-4.888,10.919-10.919c0-6.031-4.89-10.919-10.919-10.919H121.34    c-54.866,0-99.502-44.636-99.502-99.501s44.636-99.501,99.502-99.501c2.923,0,6.013,0.157,9.448,0.48    c5.822,0.54,11.049-3.596,11.842-9.396c3.932-28.82,18.161-55.327,40.067-74.638c22.111-19.492,50.542-30.226,80.056-30.226    c66.935,0,121.389,54.455,121.389,121.389c0,2.41-0.449,8.642-0.449,8.642c-0.227,3.212,0.975,6.361,3.287,8.604    c2.309,2.243,5.488,3.349,8.697,3.03c2.904-0.293,5.834-0.44,8.708-0.44c47.297,0,85.778,38.48,85.778,85.778    c0,47.297-38.48,85.777-85.778,85.777h-48.902c-6.029,0-10.919,4.888-10.919,10.919s4.89,10.919,10.919,10.919h48.902    c59.339,0,107.616-48.275,107.616-107.615C512,236.261,464.58,188.317,405.967,187.467z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M262.755,97.548c-45.658,0-84.742,34.121-90.914,79.367c-0.815,5.975,3.371,11.462,9.343,12.295    c6.368,0.888,11.548-3.869,12.295-9.343c4.702-34.479,34.484-60.48,69.276-60.48c6.031,0,10.919-4.888,10.919-10.919    C273.674,102.436,268.785,97.548,262.755,97.548z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M313.279,410.283c-4.017-4.496-10.92-4.887-15.418-0.868l-26.265,23.463V298.547c0-6.031-4.89-10.919-10.919-10.919    c-6.031,0-10.919,4.888-10.919,10.919v134.33l-26.264-23.463c-4.496-4.018-11.401-3.627-15.417,0.868    c-4.018,4.498-3.63,11.399,0.868,15.418l39.717,35.483c3.425,3.061,7.719,4.59,12.014,4.59c4.294,0,8.589-1.53,12.013-4.589    l39.719-35.483C316.907,421.684,317.296,414.781,313.279,410.283z" />
+              </g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+          </svg>
+          <span>Choice your file</span>
+        </p>
+      </label>
+      <input class="btn" type='submit' value='Upload' />
     </form>
-    <form id='downloadForm'>
-      <input type="text" name="sampleFile" />
-      <input type='submit' value='Download!' />
+    <form id='downloadForm' class="d-flex download-form">
+      <input class="form-control search-field" type="text" name="sampleFile" autocomplete="off" />
+      <input class="btn" type='submit' value='Download' />
     </form>
+    <div class="download-img-wrap">
+      <img id="download-img">
+    </div>
+  </app>
+
+
+  <script src="/HttpRequest.js"></script>
+  <script src="/progress.js"></script>
 </body>
-<script src="/src/HttpRequest.js" ></script>
-<script src="src/progress.js" ></script>
+
 </html>
