make/helpers, change structure of project

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </form>
     <div class="download-img-wrap">
       <img id="download-img">
+      <span>&times;</span>
     </div>
     <div class="download-list-wrap">
       <ul class="download-list">
@@ -59,8 +60,14 @@
 
   </app>
 
+  <script src="/helpers.js"></script>
   <script src="/HttpRequest.js"></script>
   <script src="/progress.js"></script>
+  <script src="/upload.js"></script>
+  <script src="/download.js"></script>
+  <script src="/inputsChanger.js"></script>
+  <script src="/fileList.js"></script>
+  <script src="/imgViewer.js"></script>
 </body>
 
 </html>
