--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       aria-valuemax="100"></div>
   </div>
   <app class="app-wrapper">
-    <form id='uploadForm' encType="multipart/form-data">
+    <form class='upload-form' encType="multipart/form-data">
       <label class="download-field-wrap">
         <input type="file" name="sampleFile" id="download" />
         <p class="download-icon">
@@ -34,7 +34,16 @@
       </label>
       <input class="btn btn-upload" type='submit' value='Upload' disabled/>
     </form>
-    <form id='downloadForm' class="d-flex download-form">
+    <div class="progress upload-progress-wrap">
+      <div class="progress-bar-upload" id="progress" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
+        aria-valuemax="100">
+        <span class="procentage-progress">
+          <i>10</i>
+          %
+        </span>
+      </div>
+    </div>
+    <form class='download-form' class="d-flex download-form">
       <input class="form-control search-field" type="text" name="sampleFile" autocomplete="off" />
       <input class="btn btn-download" type='submit' value='Download' disabled />
     </form>
@@ -60,7 +69,7 @@
 
   </app>
 
-  <script src="/helpers.js"></script>
+  
   <script src="/HttpRequest.js"></script>
   <script src="/progress.js"></script>
   <script src="/upload.js"></script>
